objects/ASI_eForm_PR_System__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Basic_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>IT Admin</fullName>
                </value>
                <value>
                    <fullName>System Apps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Change_User_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change User Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_PR_Systems10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_PR_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_PR_Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_System_Description__c</fullName>
        <label>System Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_System_Key__c</fullName>
        <displayFormat>PRSYK-{00000}</displayFormat>
        <label>System Key</label>
        <type>AutoNumber</type>
    </fields>
    <label>ASI eForm PR System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_System_Key__c</columns>
        <columns>ASI_eForm_System_Description__c</columns>
        <columns>ASI_eForm_Basic_Selection__c</columns>
        <columns>ASI_eForm_Category__c</columns>
        <columns>ASI_eForm_Inactive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI eForm PR Systems</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>